Bug 13822 - Python bindings in for group policy update don't handle exceptions correctly
Summary: Python bindings in for group policy update don't handle exceptions correctly
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.8.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Andrew Bartlett
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-06 10:25 UTC by Kristján Jónsson (dead mail address)
Modified: 2020-08-24 17:06 UTC (History)
0 users

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kristján Jónsson (dead mail address) 2019-03-06 10:25:47 UTC
Error handling in in the python bindings to the libgpo library is broken, so that underlying errors aren't properly reported as python exceoptions.  The file libgpo/pygpo.c requires numerous fixes to address this and make it more robust.
This but applies to all versions between 4.8 and 4.10
Comment 1 David Mulder 2020-08-24 17:06:27 UTC
This appears to have been resolved by:
c25e7953
5b4618ca
18638535
d2a75489
1ff252e3
a8b316d1
08b5b11b
36adf08f